[project]
name = "data-analyst-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "groq>=1.1.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "openai>=2.31.0",
    "pandas>=3.0.2",
    "pyinstaller>=6.19.0",
]
